--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "author": "sangam mukherjee",
   "license": "ISC",
   "dependencies": {
-    "@mongodb-js/saslprep": "^1.1.9",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4",
-    "paypal-rest-sdk": "^1.8.1",
-    "razorpay": "^2.9.5"
+    "razorpay": "^2.9.2",
+    "@mongodb-js/saslprep": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
