--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "^6.12.0",
     "multer": "^1.4.5-lts.1",
-    "razorpay": "^2.9.2",
-    "@mongodb-js/saslprep": "^1.1.0"
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
