--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "razorpay": "^2.9.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/runtime": "^7.23.9",
+    "@babel/plugin-transform-runtime": "^7.23.9"
   },
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   }
 }
