--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.12.0",
     "multer": "^1.4.5-lts.1",
     "razorpay": "^2.9.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-runtime": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/runtime": "^7.23.9",
-    "@babel/plugin-transform-runtime": "^7.23.9"
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": "18.x"
