--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.12.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "razorpay": "^2.9.2"
   },
   "devDependencies": {
