--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "sangam mukherjee",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "2.4.3",
     "cloudinary": "^2.5.1",
