--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
-    "argon2": "^0.41.1",
+    "argon2-wasm": "^0.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
