--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "sangam mukherjee",
   "license": "ISC",
   "dependencies": {
+    "@mui/icons-material": "^6.4.6",
     "@sendgrid/mail": "^8.1.4",
     "argon2-wasm": "^0.9.0",
     "bcrypt": "^5.1.1",
@@ -27,7 +28,8 @@
     "mongoose": "^6.12.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
